# cpp_base_vscode

./: .gitignore  CMakeLists.txt  README
include/: exampleclass.hpp
src/: main.cpp
